# langchain-notes

./: langgraph.json  pyproject.toml
.langgraph_api/: .langgraph_ops.pckl
app/agent/: personal_chief.py
app/api/v1/: chat.py
notebooks/2 langchain入门/: 2.2.ipynb  2.3Message.ipynb  2.5Tools.ipynb  2.7实战.ipynb
notebooks/2 langchain入门/resources/: personal_chief.db-shm  personal_chief.db-wal
